--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
-title: Researcher
-url: "https://ankitsultana.com"
-baseurl: "/researcher"
+title: Chenna Kautilya''s Resume
+url: "https://resume.chenna.me"
+baseurl: "/"
 
 markdown: kramdown
 #ins_logo: "./bits-logo.png"
 
-tracking_id: #
+# tracking_id: #
 
-footer: yes
-footer_url: "https://github.com/ankitsultana"
-footer_text: "Page design by Ankit Sultana"
+# footer: yes
+# footer_url: "https://github.com/ankitsultana"
+# footer_text: "Page design by Ankit Sultana"
 
 sass:
     style: compressed
@@ -17,8 +17,8 @@ sass:
 
 nav:
  - name: "About"
-   link: "/researcher/"
+   link: "https://chenna.me/"
  - name: "Resume"
-   link: "resume.pdf"
+   link: "https://github.com/hashb/resume/raw/robotics/resume.pdf"
  - name: "Contact"
    link: "contact"
